// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test the translated string schema factory Test getTranslatedStringArraySchema() the schema should match the snapshot 1`] = `
{
  "description": "The alternative labels",
  "items": {
    "additionalProperties": false,
    "description": "The alternative labels",
    "properties": {
      "am": {
        "description": "The alternative labels (Amharic)",
        "maxLength": 10,
        "pattern": "\\S",
        "type": "string",
      },
      "en": {
        "description": "The alternative labels (English)",
        "maxLength": 10,
        "pattern": "\\S",
        "type": "string",
      },
      "es": {
        "description": "The alternative labels (Spanish)",
        "maxLength": 10,
        "pattern": "\\S",
        "type": "string",
      },
      "fr": {
        "description": "The alternative labels (French)",
        "maxLength": 10,
        "pattern": "\\S",
        "type": "string",
      },
      "pt": {
        "description": "The alternative labels (Portuguese)",
        "maxLength": 10,
        "pattern": "\\S",
        "type": "string",
      },
    },
    "required": [
      "en",
    ],
    "type": "object",
  },
  "maxItems": 3,
  "minItems": 0,
  "type": "array",
  "uniqueItems": true,
}
`;

exports[`Test the translated string schema factory Test getTranslatedStringSchema() Test allowNullToDelete the schema should match the snapshot 1`] = `
{
  "additionalProperties": false,
  "description": "The preferred label",
  "properties": {
    "am": {
      "description": "The preferred label (Amharic)",
      "maxLength": 10,
      "pattern": "\\S",
      "type": [
        "string",
        "null",
      ],
    },
    "en": {
      "description": "The preferred label (English)",
      "maxLength": 10,
      "pattern": "\\S",
      "type": "string",
    },
    "es": {
      "description": "The preferred label (Spanish)",
      "maxLength": 10,
      "pattern": "\\S",
      "type": [
        "string",
        "null",
      ],
    },
    "fr": {
      "description": "The preferred label (French)",
      "maxLength": 10,
      "pattern": "\\S",
      "type": [
        "string",
        "null",
      ],
    },
    "pt": {
      "description": "The preferred label (Portuguese)",
      "maxLength": 10,
      "pattern": "\\S",
      "type": [
        "string",
        "null",
      ],
    },
  },
  "type": "object",
}
`;

exports[`Test the translated string schema factory Test getTranslatedStringSchema() the schema should match the snapshot 1`] = `
{
  "additionalProperties": false,
  "description": "The preferred label",
  "properties": {
    "am": {
      "description": "The preferred label (Amharic)",
      "maxLength": 10,
      "pattern": "\\S",
      "type": "string",
    },
    "en": {
      "description": "The preferred label (English)",
      "maxLength": 10,
      "pattern": "\\S",
      "type": "string",
    },
    "es": {
      "description": "The preferred label (Spanish)",
      "maxLength": 10,
      "pattern": "\\S",
      "type": "string",
    },
    "fr": {
      "description": "The preferred label (French)",
      "maxLength": 10,
      "pattern": "\\S",
      "type": "string",
    },
    "pt": {
      "description": "The preferred label (Portuguese)",
      "maxLength": 10,
      "pattern": "\\S",
      "type": "string",
    },
  },
  "required": [
    "en",
  ],
  "type": "object",
}
`;
